src/test/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx` in this scope
  --> $DIR/macro-name-typo.rs:2:5
   |
LL |       printlx!("oh noes!");
   |       ^^^^^^^ help: a macro with a similar name exists: `println`
   | 
  ::: $SRC_DIR/libstd/macros.rs:LL:COL
   |
LL | / macro_rules! println {
LL | |     () => ($crate::print!("\n"));
LL | |     ($($arg:tt)*) => ({
LL | |         $crate::io::_print($crate::format_args_nl!($($arg)*));
LL | |     })
LL | | }
   | |_- similarly named macro `println` defined here

error: aborting due to previous error

